Fix: Configurado CORS para aceitar domÃ­nio de produÃ§Ã£o bancoai.com.br